libs/bng/test/negative/N0010_2_symbols_same_name.bngl
# FAIL
# OUTPUT: error: Symbol 'a' was already defined.
# OUTPUT: error: Symbol 'A' was already defined.

begin parameters
   a 5
   a 6
end parameters

begin molecule types
   A()
   A()
end molecule types
